; ModuleID = '/home/carl/AnghaBench/libgit2/examples/extr_common.c_resolve_refish.c'
source_filename = "/home/carl/AnghaBench/libgit2/examples/extr_common.c_resolve_refish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @resolve_refish(i32** %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 0, i32* %10, align 4
  %11 = load i32**, i32*** %5, align 8
  %12 = icmp ne i32** %11, null
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i32*, i32** %6, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = call i32 @git_reference_dwim(i32** %8, i32* %15, i8* %16)
  store i32 %17, i32* %10, align 4
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* @GIT_OK, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %28

21:                                               ; preds = %3
  %22 = load i32**, i32*** %5, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 @git_annotated_commit_from_ref(i32** %22, i32* %23, i32* %24)
  %26 = load i32*, i32** %8, align 8
  %27 = call i32 @git_reference_free(i32* %26)
  store i32 0, i32* %4, align 4
  br label %45

28:                                               ; preds = %3
  %29 = load i32*, i32** %6, align 8
  %30 = load i8*, i8** %7, align 8
  %31 = call i32 @git_revparse_single(i32** %9, i32* %29, i8* %30)
  store i32 %31, i32* %10, align 4
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* @GIT_OK, align 4
  %34 = icmp eq i32 %32, %33
  br i1 %34, label %35, label %43

35:                                               ; preds = %28
  %36 = load i32**, i32*** %5, align 8
  %37 = load i32*, i32** %6, align 8
  %38 = load i32*, i32** %9, align 8
  %39 = call i32 @git_object_id(i32* %38)
  %40 = call i32 @git_annotated_commit_lookup(i32** %36, i32* %37, i32 %39)
  store i32 %40, i32* %10, align 4
  %41 = load i32*, i32** %9, align 8
  %42 = call i32 @git_object_free(i32* %41)
  br label %43

43:                                               ; preds = %35, %28
  %44 = load i32, i32* %10, align 4
  store i32 %44, i32* %4, align 4
  br label %45

45:                                               ; preds = %43, %21
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @git_reference_dwim(i32**, i32*, i8*) #1

declare dso_local i32 @git_annotated_commit_from_ref(i32**, i32*, i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_revparse_single(i32**, i32*, i8*) #1

declare dso_local i32 @git_annotated_commit_lookup(i32**, i32*, i32) #1

declare dso_local i32 @git_object_id(i32*) #1

declare dso_local i32 @git_object_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
